client1 cleaned